Fix Security Issues

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 TODO:
+    find correct place for username
     connect an sql lite database
     deploying to altervista
     improve sidebar scaling
